Fix wrap issue with the item list skills

--- a/_sass/item-list.scss
+++ b/_sass/item-list.scss
@@ -7,6 +7,10 @@
         display: flex;
         flex-flow: column nowrap;
         margin-left: 15px;
+        .skills {            
+            display: flex;
+            flex-flow: row wrap;
+        }
     }
     .list-item-icons {
         display: flex;
