--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -65,5 +65,6 @@ a:hover {
     @extend %tag-shared;
     font-size: 10px;
     margin-right: 5px;
+    margin-bottom: 5px;
     padding: 3px 6px;
 }
